<resources>
    <string name="app_name">Worker\'s Card</string>
    <string name="call_button">call button</string>
    <string name="image_of_worker">image of worker</string>
    <string name="achievement_string">Достижения</string>
    <string name="textview">TextView</string>
    <string name="contacts">Контакты</string>
    <string name="textview2">TextView</string>
    <string name="post">Post</string>
    <string name="experience">experience</string>
    <string name="fio">fio</string>
</resources>